[project]
version = "0.1.3"
name = "obscure"
description = "Create reversable transformations to obscure sequental ID numbers."
readme = "README.md"
#license = { file = "LICENSE.rst" }
maintainers = [{name = "Clinton James", email = "clinton+obscure@jidn.com"},]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/jidn/obscure"
Documentation = "https://github.com/jidn/obscure#readme"
Issues = "https://github.com/jidn/obscure/issues"
Source = "https://github.com/jidn/obscure"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# filterwarnings = ["error"]
addopts = "-rfEX --strict-markers --doctest-modules"
minversion = "6.0"
testpaths = ["src", "tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.paths]
source = ["src", "tests"]

[tool.ruff]
ignore-init-module-imports = true

[tool.ruff.pydocstyle]
convention = "google"
